--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,10 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+    <style name="TextViewStyle" parent="android:Widget.TextView">
         <item name="android:fontFamily">serif</item>
         <item name="android:textColor">@color/colorTextMain</item>
     </style>
-
 </resources>
