--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,150 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".EditorActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/text_view_product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="serif"
-            android:padding="@dimen/text_padding"
-            android:text="@string/product_name"
-            android:textSize="@dimen/text_size" />
-
-        <EditText
-            android:id="@+id/edit_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/name_hint"
-            android:layout_marginRight="@dimen/text_padding"
-            android:layout_marginEnd="@dimen/text_padding"
-            android:textSize="@dimen/text_size_editor"
-            android:inputType="textCapWords" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/text_view_product_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="serif"
-        android:padding="@dimen/text_padding"
-        android:text="@string/product_description"
-        android:textSize="@dimen/text_size" />
-
-    <EditText
-        android:id="@+id/edit_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/product_description_hint"
-        android:layout_marginRight="@dimen/text_padding"
-        android:layout_marginEnd="@dimen/text_padding"
-        android:layout_marginStart="@dimen/text_padding"
-        android:layout_marginLeft="@dimen/text_padding"
-        android:textSize="@dimen/text_size_editor"
-        android:inputType="text" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-    <TextView
-        android:id="@+id/text_view_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="serif"
-        android:padding="@dimen/text_padding"
-        android:text="@string/price_ct"
-        android:textSize="@dimen/text_size" />
-
-        <EditText
-            android:id="@+id/edit_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/product_price_hint"
-            android:layout_marginRight="@dimen/text_padding"
-            android:layout_marginEnd="@dimen/text_padding"
-            android:textSize="@dimen/text_size_editor"
-            android:inputType="number" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:id="@+id/text_view_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="serif"
-        android:padding="@dimen/text_padding"
-        android:text="@string/quantity"
-        android:textSize="@dimen/text_size" />
-
-        <EditText
-            android:id="@+id/edit_quantity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/quantity_hint"
-            android:layout_marginRight="@dimen/text_padding"
-            android:layout_marginEnd="@dimen/text_padding"
-            android:textSize="@dimen/text_size_editor"
-            android:inputType="number" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:id="@+id/text_view_supplier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="serif"
-        android:padding="@dimen/text_padding"
-        android:text="@string/supplier_name"
-        android:textSize="@dimen/text_size" />
-        <EditText
-            android:id="@+id/edit_supplier"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/supplier_name_hint"
-            android:layout_marginRight="@dimen/text_padding"
-            android:layout_marginEnd="@dimen/text_padding"
-            android:textSize="@dimen/text_size_editor"
-            android:inputType="textCapWords" />
-    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-    <TextView
-        android:id="@+id/text_view_supplier_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="serif"
-        android:padding="@dimen/text_padding"
-        android:text="@string/supplier_phone_number"
-        android:textSize="@dimen/text_size" />
+
+            <TextView
+                android:id="@+id/text_view_product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:padding="@dimen/text_padding"
+                android:text="@string/product_name"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/edit_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/text_padding"
+                android:layout_marginRight="@dimen/text_padding"
+                android:hint="@string/name_hint"
+                android:inputType="textCapWords"
+                android:textSize="@dimen/text_size_editor" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_view_product_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="serif"
+            android:padding="@dimen/text_padding"
+            android:text="@string/product_description"
+            android:textSize="@dimen/text_size" />
+
+        <EditText
+            android:id="@+id/edit_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/text_padding"
+            android:layout_marginLeft="@dimen/text_padding"
+            android:layout_marginRight="@dimen/text_padding"
+            android:layout_marginStart="@dimen/text_padding"
+            android:hint="@string/product_description_hint"
+            android:inputType="text"
+            android:textSize="@dimen/text_size_editor" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_view_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:padding="@dimen/text_padding"
+                android:text="@string/price_ct"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/edit_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/text_padding"
+                android:layout_marginRight="@dimen/text_padding"
+                android:hint="@string/product_price_hint"
+                android:inputType="number"
+                android:textSize="@dimen/text_size_editor" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_view_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:padding="@dimen/text_padding"
+                android:text="@string/quantity"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/edit_quantity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/text_padding"
+                android:layout_marginRight="@dimen/text_padding"
+                android:hint="@string/quantity_hint"
+                android:inputType="number"
+                android:textSize="@dimen/text_size_editor" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_view_supplier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:padding="@dimen/text_padding"
+                android:text="@string/supplier_name"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/edit_supplier"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/text_padding"
+                android:layout_marginRight="@dimen/text_padding"
+                android:hint="@string/supplier_name_hint"
+                android:inputType="textCapWords"
+                android:textSize="@dimen/text_size_editor" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_view_supplier_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:padding="@dimen/text_padding"
+                android:text="@string/supplier_phone_number"
+                android:textSize="@dimen/text_size" />
+
             <EditText
                 android:id="@+id/edit_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/use_only_numbers"
-                android:layout_marginRight="@dimen/text_padding"
                 android:layout_marginEnd="@dimen/text_padding"
-                android:textSize="@dimen/text_size_editor"
-                android:inputType="phone" />
+                android:layout_marginRight="@dimen/text_padding"
+                android:hint="@string/use_only_numbers"
+                android:inputType="phone"
+                android:textSize="@dimen/text_size_editor" />
         </LinearLayout>
 
-
-</LinearLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/cont_desc_editor_book"
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_book_nathan_dumlao_unsplash"
+            android:tint="@color/colorBackground" />
+    </LinearLayout>
+</ScrollView>
