--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="text_size">16sp</dimen>
     <dimen name="text_padding">16dp</dimen>
     <dimen name="text_size_editor">14sp</dimen>
+    <dimen name="fab_width">60dp</dimen>
+    <dimen name="fab_height">60dp</dimen>
 </resources>
