--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,15 @@
     <dimen name="text_size_editor">14sp</dimen>
     <dimen name="fab_width">60dp</dimen>
     <dimen name="fab_height">60dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
+    <dimen name="card_corner_radius">12dp</dimen>
+    <dimen name="card_elevation">8dp</dimen>
+    <dimen name="padding_top_medium">16dp</dimen>
+    <dimen name="padding_top_small">8dp</dimen>
+    <dimen name="text_padding_small">8dp</dimen>
+    <dimen name="text_in_stock">10sp</dimen>
+    <dimen name="text_price">12sp</dimen>
+    <dimen name="list_item_height">90dp</dimen>
+    <dimen name="text_buy">14sp</dimen>
+    <dimen name="padding_small">8dp</dimen>
 </resources>
