--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,6 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <!-- A CardView that contains a TextView android:foreground="@drawable/custom_selector"-->
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
@@ -11,11 +15,10 @@
         android:layout_height="@dimen/list_item_height"
         android:layout_gravity="center"
         android:layout_margin="@dimen/margin_small"
-        android:background="@color/colorBackground"
+        android:backgroundTint="@color/colorBackground"
         android:clickable="true"
         android:focusable="true"
-        card_view:cardCornerRadius="@dimen/card_corner_radius"
-        card_view:cardElevation="@dimen/card_elevation">
+        card_view:cardCornerRadius="@dimen/card_corner_radius">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -100,4 +103,5 @@
             </RelativeLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
+    </RelativeLayout>
 </layout>
