--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,101 +9,100 @@
         android:layout_height="match_parent"
         android:descendantFocusability="blocksDescendants">
 
-    <!-- A CardView that contains a TextView android:foreground="@drawable/custom_selector"-->
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/list_item_height"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/margin_small"
-        android:backgroundTint="@color/colorBackground"
-        android:clickable="true"
-        android:focusable="true"
-
-        card_view:cardCornerRadius="@dimen/card_corner_radius">
-
-        <RelativeLayout
+        <!-- A CardView that contains a TextView android:foreground="@drawable/custom_selector"-->
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/list_item_image"
-                android:layout_width="@dimen/list_item_height"
-                android:layout_height="@dimen/list_item_height"
-                android:src="@drawable/default_book_nathan_dumlao_unsplash" />
-
-            <TextView
-                android:id="@+id/text_view_book_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/list_item_image"
-                android:layout_toLeftOf="@id/buy_bag"
-                android:layout_toRightOf="@id/list_item_image"
-                android:layout_toStartOf="@+id/buy_bag"
-                android:fontFamily="cursive"
-                android:paddingBottom="@dimen/text_padding"
-                android:paddingEnd="@dimen/text_padding_small"
-                android:paddingLeft="@dimen/text_padding_small"
-                android:paddingRight="@dimen/text_padding_small"
-                android:paddingStart="@dimen/text_padding_small"
-                android:paddingTop="@dimen/text_padding_small"
-                android:textColor="@color/colorTextMain"
-                android:textSize="@dimen/text_size"
-                android:textStyle="bold"
-                tools:text="Book title" />
-
-            <TextView
-                android:id="@+id/text_view_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/text_view_book_title"
-                android:layout_toEndOf="@id/list_item_image"
-                android:layout_toRightOf="@id/list_item_image"
-                android:fontFamily="serif"
-                android:paddingLeft="@dimen/text_padding_small"
-                android:paddingStart="@dimen/text_padding_small"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/text_price"
-                tools:text="Price: 15 $" />
-
-            <TextView
-                android:id="@+id/text_view_in_stock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@id/text_view_price"
-                android:layout_toEndOf="@id/list_item_image"
-                android:layout_toRightOf="@id/list_item_image"
-                android:fontFamily="serif"
-                android:padding="@dimen/text_padding_small"
-                android:textSize="@dimen/text_in_stock"
-                tools:text="In stock: 2" />
+            android:layout_height="@dimen/list_item_height"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_small"
+            android:backgroundTint="@color/colorBackground"
+            card_view:cardCornerRadius="@dimen/card_corner_radius">
 
             <RelativeLayout
-                android:id="@+id/buy_bag"
-                android:layout_width="60dp"
-                android:layout_height="90dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/buy_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="@dimen/margin_small"
-                    android:src="@drawable/bag" />
+                    android:id="@+id/list_item_image"
+                    android:layout_width="@dimen/list_item_height"
+                    android:layout_height="@dimen/list_item_height"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/default_book_nathan_dumlao_unsplash" />
 
                 <TextView
+                    android:id="@+id/text_view_book_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
+                    android:layout_toEndOf="@id/list_item_image"
+                    android:layout_toLeftOf="@id/buy_button"
+                    android:layout_toRightOf="@id/list_item_image"
+                    android:layout_toStartOf="@+id/buy_button"
                     android:fontFamily="cursive"
-                    android:paddingTop="@dimen/padding_top_small"
-                    android:text="@string/buy"
-                    android:textSize="@dimen/text_buy"
-                    android:textStyle="bold" />
+                    android:paddingBottom="@dimen/text_padding"
+                    android:paddingEnd="@dimen/text_padding_small"
+                    android:paddingLeft="@dimen/text_padding_small"
+                    android:paddingRight="@dimen/text_padding_small"
+                    android:paddingStart="@dimen/text_padding_small"
+                    android:paddingTop="@dimen/text_padding_small"
+                    android:textColor="@color/colorTextMain"
+                    android:textSize="@dimen/text_size"
+                    android:textStyle="bold"
+                    tools:text="Book title" />
+
+                <TextView
+                    android:id="@+id/text_view_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_book_title"
+                    android:layout_toEndOf="@id/list_item_image"
+                    android:layout_toRightOf="@id/list_item_image"
+                    android:fontFamily="serif"
+                    android:paddingLeft="@dimen/text_padding_small"
+                    android:paddingStart="@dimen/text_padding_small"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/text_price"
+                    tools:text="Price: 15 $" />
+
+                <TextView
+                    android:id="@+id/text_view_in_stock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_below="@id/text_view_price"
+                    android:layout_toEndOf="@id/list_item_image"
+                    android:layout_toRightOf="@id/list_item_image"
+                    android:fontFamily="serif"
+                    android:padding="@dimen/text_padding_small"
+                    android:textSize="@dimen/text_in_stock"
+                    tools:text="In stock: 2" />
+
+                <RelativeLayout
+                    android:id="@+id/buy_button"
+                    android:layout_width="60dp"
+                    android:layout_height="90dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:clickable="true"
+                    android:focusable="true">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/margin_small"
+                        android:src="@drawable/bag" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="cursive"
+                        android:paddingTop="@dimen/padding_top_small"
+                        android:text="@string/buy"
+                        android:textSize="@dimen/text_buy"
+                        android:textStyle="bold" />
+                </RelativeLayout>
             </RelativeLayout>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
     </RelativeLayout>
 </layout>
