--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -101,9 +101,9 @@
                     android:id="@+id/edit_quantity"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
                     android:layout_marginEnd="@dimen/text_padding"
                     android:layout_marginRight="@dimen/text_padding"
+                    android:layout_weight="2"
                     android:hint="@string/quantity_hint"
                     android:inputType="number"
                     android:textSize="@dimen/text_size_editor" />
@@ -120,14 +120,14 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/baseline_arrow_drop_up_black_36"/>
+                        android:src="@drawable/baseline_arrow_drop_up_black_36" />
 
                     <ImageView
                         android:id="@+id/button_decrease"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/baseline_arrow_drop_down_black_36"
-                        android:layout_gravity="center"/>
+                        android:layout_gravity="center"
+                        android:src="@drawable/baseline_arrow_drop_down_black_36" />
 
                 </LinearLayout>
 
@@ -159,45 +159,44 @@
             </LinearLayout>
 
 
+            <TextView
+                android:id="@+id/text_view_supplier_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:padding="@dimen/text_padding"
+                android:text="@string/supplier_phone_number"
+                android:textSize="@dimen/text_size" />
 
-                <TextView
-                    android:id="@+id/text_view_supplier_phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="serif"
-                    android:padding="@dimen/text_padding"
-                    android:text="@string/supplier_phone_number"
-                    android:textSize="@dimen/text_size" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/edit_phone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:layout_marginStart="@dimen/text_padding"
-                    android:layout_marginLeft="@dimen/text_padding"
                     android:layout_gravity="bottom"
+                    android:layout_marginLeft="@dimen/text_padding"
+                    android:layout_marginStart="@dimen/text_padding"
+                    android:layout_weight="3"
                     android:hint="@string/use_only_numbers"
                     android:inputType="phone"
                     android:textSize="@dimen/text_size_editor" />
 
-                    <ImageView
+                <ImageView
                     android:id="@+id/button_call"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                        android:focusable="true"
-                        android:clickable="true"
-                    android:src="@drawable/baseline_local_phone_black_48"
-                    android:paddingLeft="@dimen/padding_small"
-                    android:paddingStart="@dimen/padding_small"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:paddingBottom="@dimen/padding_small"
+                    android:paddingEnd="@dimen/padding_small"
+                    android:paddingLeft="@dimen/padding_small"
                     android:paddingRight="@dimen/padding_small"
-                    android:paddingEnd="@dimen/padding_small"/>
+                    android:paddingStart="@dimen/padding_small"
+                    android:src="@drawable/baseline_local_phone_black_48" />
             </LinearLayout>
 
             <Button
@@ -206,11 +205,10 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_small"
                 android:background="@color/colorPrimaryDark"
-                android:text="@string/button_add_image"
-                android:textStyle="bold"
                 android:fontFamily="serif"
+                android:text="@string/button_add_image"
                 android:textColor="@color/colorTextButton"
-                />
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/book_image"
